monitoring/kube-state-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: dev
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kube-state-metrics
